# telegram-decoder

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.json  decode_telegrams.py  derivation.nix  flake.nix  stops.json
.github/: pull_request_template.md
.github/workflows/: decode-server.yml  telegram-decoder.yml
data/: 1bit_error_r09_16_telegrams.json  unit_test1.json  unit_test2.json  valid_r09_16_telegrams.json
nixos-module/: default.nix
src/: main.rs  sink.rs  structs.rs  telegram.rs
src/decoder/: mod.rs  structs.rs  test.rs
