[package]
name = "telegram-decode"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegrams = { version = "0.4", git = "https://github.com/dump-dvb/telegrams" }
stop-names = { versipn = "0.3", git = "https://github.com/dump-dvb/stop-names" }

clap = { version = "3.2", features = ["derive"] }

regex = "1.5"
derive_builder = "0.11"
serde = "1.0"

serde_json = "1.0"
serde_derive = "1.0"
g2poly = "0.4"

reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3" # for our async / await blocks
tokio = { version = "1.15", features = ["full"] }

hex-string = "*"
uuid = { version = "=0.8.1", features = [ "serde", "v4"]}
