[package]
name = "telegram-decoder"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tlms = { version = "0.9", git = "https://github.com/tlm-solutions/tlms.rs", features = ["telegrams", "receivers"]}

clap = { version = "4", features = ["derive"] }

derive_builder = "0.11"
serde = "1.0"

serde_json = "1.0"
serde_derive = "1.0"
g2poly = "0.4"

reqwest = { version = "0.11", features = ["blocking", "json"] } # reqwest with JSON parsing support

chrono = "*"
num-traits = "*"
uuid = { version = "=0.8.1", features = [ "serde", "v4"]}
log = "0.4"
env_logger = "*"
